# kakasi

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  config.status  configure  configure.in  kakasi-config  libtool  tags
lib/: Makefile  libkk2.c  liblevel.c  makefile.msc
lib/.libs/: libkakasi.libcmd  libkakasi.so.2  libkakasi.so.2.1.0
man/: Makefile
src/: Makefile  atoc_conv  kakasi  mkkanwa  rdic_conv  wx2_conv
src/.libs/: atoc_conv_ltshwrapper  kakasi_ltshwrapper  lt-atoc_conv.c  lt-kakasi.c  lt-mkkanwa.c  lt-rdic_conv.c  lt-wx2_conv.c  mkkanwa_ltshwrapper  rdic_conv_ltshwrapper  wx2_conv_ltshwrapper
tests/: Makefile
tests/data/: Makefile
